modified gitignore and tex file

--- a/Udbp.tex
+++ b/Udbp.tex
@@ -1,9 +1,25 @@
 \documentclass[12pt]{article}
+
+\usepackage{fontspec} 
+\setmainfont{Arial}
+
 \begin{document}
-	si vuole realizzare una base di dati per l'organizzazione per una catena di cinema, chiamato per comodita' UCI.
+	\section{RICORDATI DI USARE ARIAL}
+	\section{Bozza}
+	si vuole realizzare una base di dati per l'organizzazione per una catena di cinema, chiamato per comodita' UIC Cinemas.
 	
-	La UCI cinemas ha in possesso molteplici cinema situati in diverse citta'. Ogni cinema e' un multisala composto dalle 5 alle 10 sale ciascuna con posti che variano da 50 a 250 posti numerati. Ogni film proiettato varia  in lunghezza, genere, e cast (composto  da attori, sceneggiatori e produttori).
+	La UCI Cinemas ha in possesso molteplici cinema situati in diverse citta'. Ogni cinema e' un multisala composto dalle 5 alle 10 sale ciascuna con posti che variano da 50 a 250 posti numerati. Ogni film proiettato varia  in lunghezza, genere, e cast (composto  da attori, sceneggiatori e produttori).
 	La programmazione della proiezione dei film puo' variare di giorno in giorno (varia in base ai giorni della settimana, per esempio Martedi' vengono proiettati meno film rispetto al weekend) e comprende la proiezione un film in un cinema in una sala ad un ora specifica e nella durata totale della proiezone sono compresi dai 15 ai 30 min di pubblicita' (nelle programmazioni piu corpose vengono proiettati piu' film, di conseguenza viene ridotto la durata della pubblicita').
 	Il consumatore per vedere un film deve acquistare un biglietto, tramite portale on-line o in biglietteria. Tale biglietto contiene all'interno informazioni inerenti a: cinema dove e la sala dove avviene la proiezione, il film di interesse, l'ora e il giorno di inizio film e il numero del posto [(il posto viene assegnato automaticamente al momento dell'acquisto)].
+	
+	
+	\section{Abstract}
+	
+	La societa' UCI Cinemas e' una catena di cinema, nata in regno unito nel 1988 da una partnership tra Universal Studios e Paramount Pictures che nel corso degli anni si e' estesa sia nel campo nazionale, che nel campo internazionale. 
+	Affinche' un cliente possa vedere un film di interesse, deve acquistare un biglietto presso le biglietterie 
+	
+	\section{Analisi dei requisiti}
+	
+		
 	
 \end{document}
