--- a/Udbp.tex
+++ b/Udbp.tex
@@ -34,8 +34,8 @@
 	Per poter identificare una {\bf Sala} all'interno del cinema abbiamo bisogno delle sguenti informazioni:
 	\begin{itemize}
 		\item Numero sala (univoco all'interno del cinema)
-		\item Numero posti
 		\item Cinema di appartenenza
+		\item Numero posti
 		\item Grandezza schermo (espresso in pollici)
 	\end{itemize}
 	All'interno di ogni sala viene proiettato un {\bf Film}:
@@ -174,6 +174,42 @@
 		\hline 		
 	\end{tabular} 
 	
-	
+	\section{Progettazione Concettuale}	
+	\subsection{Lista delle entita'}
+	Di seguito veranno riportate le classi che verranno contenute nel database, tutti i campi sono \textbf{not null} tranne quelli specificati.\\
+	\underline{Gli identificatori delle entita' sono sottolineati.}
+	\begin{itemize}
+		\item \textbf{Cinema}: Rappresenta un cinema.
+		\begin{itemize}
+			\item \underline{Nome: \textit{string} univoco}
+			\item Numero sale: \textit{int}
+			\item Luogo: attributo composto
+				\subitem Via: \textit{string}
+				\subitem Citta': \textit{string}
+				\subitem Provincia: \textit{string}
+				\subitem CAP: \textit{int}
+				\subitem Regione: \textit{string}
+				\subitem Nazione: \textit{string}			
+		\end{itemize}
+		\item \textbf{Sala}: Rappresenta una sala di un cinema.
+		\begin{itemize}
+			\item \underline{Sala: \textit{int}}
+			\item \underline{Cinema: \textit{string}}
+			\item Numero\_posti: \textit{int}
+			\item Grandezza\_schermo: \textit{int}
+		\end{itemize}
+		\item \textbf{Film}: Rappresenta un film.
+		\begin{itemize}
+			\item \underline{Titolo: \textit{string}}
+			\item \underline{Anno: \textit{int}}
+			\item Durata: \textit{timestamp}
+			\item Genere: \textit{string}
+			\item Trama: \textit{string}
+		\end{itemize}
+		\item \textbf{Lavoratore}: Rappresenta una persona che ha preso parte alla realizzazione di un film.
+		\begin{itemize}
+			\item 
+		\end{itemize}
+	\end{itemize}
 	
 \end{document}
