--- a/Udbp.tex
+++ b/Udbp.tex
@@ -46,22 +46,28 @@
 		\item Genere
 		\item Anno
 	\end{itemize}
-	Per conoscere il cast del film, c'e' bisogno di conoscere il nome e il ruolo delle persone che ne hanno preso parte, e si possono suddividere in:
+	Per conoscere il cast del film abbiamo bisogno di definire \textbf{Cast}:
+	\begin{itemize}
+		\item Film
+		\item Lavoratore
+	\end{itemize}
+	Inoltre c'e' bisogno di conoscere il nome e il ruolo delle persone che ne hanno preso parte, e si possono suddividere in:
 	\begin{itemize}
 		\item {\bf Attore}: persona che ha recitato nel film 
 		\item {\bf Sceneggiatore}: persona che ha strutturato la sceneggiatura del film 
 		\item {\bf Produttore}: persona che ha finanziato il film 
 		\item {\bf Regista}: persona che ha diretto il film
 	\end{itemize}		 
-	Di conseguenza abbiamo bisogno di definire {\bf Lavoratore}:
+	Di conseguenza abbiamo bisogno di definire {\bf Lavoratore}. Essendoci possibilita' di omonimia con stessa data di nascita, si preferisce utilizzare un identificativo:
 	\begin{itemize}
+		\item Id
 		\item Nome
 		\item Cognome
 		\item Data di nascita
-		\item Film (a cui ha partecipato)
 	\end{itemize}
 	Il cinema per emettere i biglietti non ha bisogno delle credenziali del cliente, di conseguenza il bilgietto non e' nomintivo. Il {\bf Biglietto} ha le seguenti caratteristiche:
-	\begin{itemize}		
+	\begin{itemize}	
+		\item Id	
 		\item Film (film di interesse)
 		\item Orario inizio film
 		\item Data proiezione
@@ -85,12 +91,13 @@
  		\rowcolor{lightgray}
  		\textbf{Termine} & \textbf{Descrizione} & \textbf{Sinonimi} & \textbf{Collegamenti} \\
  		\hline
- 		Programmazione                         & Pianificazione orario inizio film all'interno del cinema                &                                                                                      & Biglietto, Film                                                             \\ \hline
- 		Sala                                   & Stanza dove viene proiettato il Film                                    &                                                                                      & Biglietto, Cinema, Programmazione \\ \hline
- 		Biglietto                              & Acquisto del cliente, che attesta la vendita del posto per un dato film &                                                                                      & Cliente, Film                                                               \\ \hline
- 		Lavoratore                                & Persona singola che ha preso parte alla realizzazione del Film                  & Attore, Sceneggiatore, Produttore, Regista & Film                                                                        \\ \hline
- 		Film                                   & Film presenti al cinema                                                 &                                                                                      & Programmazione, Biglietto        \\ \hline
- 		Cinema                                   &    Impresa che offre il servizio cinematografico &                                                                                      & Programmazione, Biglietto, Sala        \\ \hline
+ 		Programmazione                         & Pianificazione orario inizio film all'interno del cinema                &                                                                                      & Film, Sala, biglietto                                                             \\ \hline
+ 		Sala                                   & Stanza dove viene proiettato il Film                                    &                                                                                      & Programmazione, Cinema \\ \hline
+ 		Biglietto                              & Acquisto del cliente, che attesta la vendita del posto per un dato film &                                                                                      & Programmazione \\ \hline
+ 		Lavoratore                                & Persona singola che ha preso parte alla realizzazione di almeno un Film                  & Attore, Sceneggiatore, Produttore, Regista & Film, Cast                                                                        \\ \hline
+ 		Film                                   & Film presenti al cinema                                                 &                                                                                      & Programmazione, Biglietto, Cast        \\ \hline
+ 		Cinema                                   &    Impresa che offre il servizio cinematografico &                                                                                      & Sala        \\ \hline
+ 		Cast                                   &    Cast del film &                                                                                      & Film, Lavoratore        \\ \hline
  	\end{tabular}
  	\subsection{Strutturazione dei requisiti}
 	\begin{tabular} { |p{16.8cm}| }
@@ -123,9 +130,18 @@
  	\begin{tabular} { |p{16.8cm}| }
  		\hline
  		\rowcolor{lightgray}
+ 		\textbf{Frasi relative a "Cast"} \\
+ 		\hline
+ 		Il Cast viene identificato tramite: Film, Lavoratore \\
+ 		\hline 		
+ 	\end{tabular} 
+ 	\\\\\\
+ 	\begin{tabular} { |p{16.8cm}| }
+ 		\hline
+ 		\rowcolor{lightgray}
  		\textbf{Frasi relative a "Lavoratore"} \\
  		\hline
- 		I Lavoratori vengono identificati tramite: Nome, Cognome, Data di nascita, Film (a cui ha lavorato) \\
+ 		I Lavoratori vengono identificati tramite: Id, Nome, Cognome, Data di nascita \\
  		\hline 		
  	\end{tabular} 
  	\\\\\\
@@ -170,7 +186,7 @@
 		\rowcolor{lightgray}
 		\textbf{Frasi relative a "Biglietto"} \\
 		\hline
-		I Biglietti vengono idetificati tramite: Film, Orario, Data proiezione, Cinema, Sala, Posto \\
+		I Biglietti vengono idetificati tramite: Id, Film, Orario, Data proiezione, Cinema, Sala, Posto \\
 		\hline 		
 	\end{tabular} 
 	
@@ -206,9 +222,12 @@
 			\item Genere: \textit{string}
 			\item Trama: \textit{string}
 		\end{itemize}
-		\item \textbf{Lavoratore}: Rappresenta una persona che ha preso parte alla realizzazione di un film.
+		\item \textbf{Lavoratore}: Rappresenta una persona che ha preso parte alla realizzazione di almeno un film.
 		\begin{itemize}
-			\item 
+			\item \underline{Id: \textit{int} univoco}
+			\item Nome: \textit{string}
+			\item Cognome: \textit{string}
+			\item Data\_di\_nascita: \textit{datetime}
 		\end{itemize}
 	\end{itemize}
 	
