--- a/Udbp.tex
+++ b/Udbp.tex
@@ -28,7 +28,7 @@
 	Essendo UCI cinemas una catena, e' necessario identificare la localita' di ciascun {\bf Cinema}:
 	\begin{itemize}
 		\item Nome cinema
-		\item Numero sale
+		\item Quantita' sale
 		\item Luogo, cosi' composto: via, citta', provincia, codice postale, regione, nazione
 	\end{itemize}
 	Per poter identificare una {\bf Sala} all'interno del cinema abbiamo bisogno delle sguenti informazioni:
@@ -105,7 +105,7 @@
  		\rowcolor{lightgray}
  		\textbf{Frasi relative a "Cinema"} \\
  		\hline
- 		I Cinema vengono identificati tramite: Nome cinema, Numero sale, Luogo (composto da via, citta', provincia, codice postale, regione, nazione) \\
+ 		I Cinema vengono identificati tramite: Nome cinema, Quantita' sale, Luogo (composto da via, citta', provincia, codice postale, regione, nazione) \\
  		\hline 		
  	\end{tabular}
  	\\\\\\
