--- a/Udbp.tex
+++ b/Udbp.tex
@@ -29,7 +29,7 @@
 	\begin{itemize}
 		\item Nome cinema
 		\item Quantita' sale
-		\item Luogo, cosi' composto: via, citta', provincia, codice postale, regione, nazione
+		\item Indirizzo, cosi' composto: via, citta', provincia, codice postale, regione, nazione
 	\end{itemize}
 	Per poter identificare una {\bf Sala} all'interno del cinema abbiamo bisogno delle sguenti informazioni:
 	\begin{itemize}
@@ -105,7 +105,7 @@
  		\rowcolor{lightgray}
  		\textbf{Frasi relative a "Cinema"} \\
  		\hline
- 		I Cinema vengono identificati tramite: Nome cinema, Quantita' sale, Luogo (composto da via, citta', provincia, codice postale, regione, nazione) \\
+ 		I Cinema vengono identificati tramite: Nome cinema, Quantita' sale, Indirizzo (composto da via, citta', provincia, codice postale, regione, nazione) \\
  		\hline 		
  	\end{tabular}
  	\\\\\\
