Aggiunta lista delle operazioni

--- a/Udbp.tex
+++ b/Udbp.tex
@@ -81,6 +81,13 @@
  		\item Film
  		\item Data e ora proiezione
  	\end{itemize} 
+ 	\subsection{Lista delle operazioni}		
+	\textbf{Operazione 1}: Aggiuta di uno spettacolo per la proiezione di un film in una sala (40 volte al giorno) \\
+	\textbf{Operazione 2}: Emissione biglietti (2500 volte al giorno)\\
+	\textbf{Operazione 3}: Aggiunta nuovi film (5 volte al mese)\\
+	\textbf{Operazione 4}: Rilascio di una recensione (2200 volte al giorno)\\
+	\textbf{Operazione 5}: Aggiunta di un nuovo cast (4 volte al mese)\\
+	\textbf{Operazione 6}: Conteggio totale posti venduti per ogni spettacolo (1 volta al giorno)
  	\subsection{Glossario dei termini}
  	\begin{tabular}{ |p{3cm}|p{4.5cm}|p{2.5cm}|p{3cm}|  }
  		%\hline
@@ -244,5 +251,10 @@
 				\subitem Nazione: \textit{string}
 		\end{itemize}
 	\end{itemize}
+	operazione 1: programmazione di uno spettacolo in una sala (40 volte al giorno)
+	operazione 2: Emissione biglietti (2500 volte al giorno)
+	operazione 3: arrivi di nuovi film (5 volte al mese)
+	operazione 4: rilascio di una recensione (2200 volte al giorno)
+	operazione 5: aggiunta di un nuovo cast (4 volte al mese)
 	
 \end{document}
