Iniziata sezione scelta identificatori primari

--- a/Udbp.tex
+++ b/Udbp.tex
@@ -355,5 +355,6 @@
 	Per rappresentare le informazioni sull’indirizzo riguardanti la posizione di un \textit{Cinema}, è stata introdotta l’entità \textit{Indirizzo}. Questa entità contiene i seguenti attributi: cap, via, provincia, regione, nazione e città. \textit{Cinema} sara' l'unica entita' collegata ad \textit{Indirizzo}.
 	\subsubsection{Scelta degli identificatori primari}
 	\paragraph{Cinema}
+	Come scelta dell'identificatore primario nell'entita', viene scelto l'attributo \textit{Nome}, perche' il nome identifica un singolo cinema.
 	
 \end{document}
